fix line height conflict on mobile

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -164,6 +164,8 @@ a:visited {
 	font-weight: normal;
 	font-size: 22px;
 	text-transform:uppercase;
+	line-height: 25px;
+	
 }
 .fontlefts {
 	float: left;
